# Dev3SixtyRev

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_REGISTRY_PART1.yaml  COMPREHENSIVE_REGISTRY_PART2.yaml  COMPREHENSIVE_REGISTRY_PART3.yaml  COMPREHENSIVE_REGISTRY_PART4.yaml  COMPREHENSIVE_REGISTRY_PART5.yaml  Claude.md  README.md  pyproject.toml  run_tests.sh  verify_sdk.py
.github/: CODEOWNERS  copilot-instructions.md  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  pr-automation.yml
docs/: CODE_QUALITY_AUTOMATION.md  REGISTRY_GUIDE.md
scripts/: watch_guards.py
sdk/: __init__.py  cli.py
sdk/context/: __init__.py  manager.py
sdk/core/: __init__.py  config.py  modes.py
sdk/guards/: __init__.py  bandaid.py  base.py  complexity.py  context_loss.py  duplicate.py  e2e.py  evidence.py  hallucination.py  registry.py  run.py  scope.py  security.py  shell_component.py  spec_compliance.py  test_enforcement.py
sdk/mcp/: __init__.py  audit.py  phase.py  server.py
sdk/registry/: __init__.py  cli.py  extraction_tester.py  loader.py  typescript_generator.py  validator.py
sdk/registry/data/: test_registry.yaml
sdk/telemetry/: __init__.py  analytics.py  cli.py  collector.py  events.py  metrics.py  models.py  store.py
sdk/testing/: __init__.py  orchestrator_flow.py
sdk/verification/: __init__.py  evidence_collector.py  phase_gate.py  task_protocol.py
tests/: conftest.py
tests/e2e/: __init__.py  test_registry_e2e.py
tests/integration/: __init__.py  test_sdk_integration.py
tests/unit/: __init__.py  test_e2e_guard.py  test_guards_base.py  test_guards_comprehensive.py  test_guards_specific.py  test_hallucination_registry.py  test_registry.py  test_telemetry.py  test_verification.py  test_verification_protocol.py
