[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threesixtyrev-sdk"
version = "1.0.0"
description = "Enterprise-grade AI development enforcement SDK for 3SixtyRev"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Omar Zamir", email = "omar@3sixtyrev.com" }
]
keywords = [
    "ai",
    "development",
    "enterprise",
    "conversational-ai",
    "code-quality",
    "guards",
    "verification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "mcp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "black>=23.9.0",
    "watchdog>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
    "radon>=6.0.0",
]
testing = [
    "deepeval>=0.21.0",
    "promptfoo>=0.50.0",
]

[project.scripts]
3sr = "sdk.cli:main"
threesixtyrev = "sdk.cli:main"
3sr-mcp = "sdk.mcp.server:main"

[project.urls]
Homepage = "https://github.com/3sixtyrev/dev-sdk"
Documentation = "https://docs.3sixtyrev.com/sdk"
Repository = "https://github.com/3sixtyrev/dev-sdk"

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["sdk"]
branch = true
omit = ["tests/*", "sdk/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
